--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <fieldset>
             <legend>GET으로 요청</legend>
             <label for="">성명: </label>
-            <input type="text" name="name" value="lee">
+            <input type="text" name="name" value="Na">
             <input type="submit" value="전송">
         </fieldset>
     </form>
@@ -19,7 +19,7 @@
         <fieldset>
             <legend>POST으로 요청</legend>
             <label for="">성명: </label>
-            <input type="text" name="name" value="lee"><br>
+            <input type="text" name="name" value="Na"><br>
             <label for="">비밀번호: </label>
             <input type="password" name="password" value="12345">
             <input type="submit" value="전송">
