--- a/templates/join-us.html
+++ b/templates/join-us.html
@@ -10,7 +10,7 @@
     <h3>개인 정보 입력 form</h3>
     <form action="/join" method= "post">
         <p>성명:<input type="text" name="name" required value="홍길동"></p>
-        <p>주소:<input type="text" name="address" required value="조선시대"></p>
+        <p>주소:<input type="text" name="address" required value="조선시대"></p><br>
         <p>나이:<input type="text" name="age" required value="30"></p>
         <p>전화번호:<input type="text" name="phone" required value="010-2222-3333"></p>
         <p>이메일:<input type="text" name="email" required value="hong@naver.com"></p>
